<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/bt_login_with_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="40dp"
        android:text="@string/bt_facebook" />

    <Button
        android:id="@+id/bt_login_with_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_login_with_facebook"
        android:layout_alignBottom="@+id/bt_login_with_facebook"
        android:layout_alignParentRight="true"
        android:text="@string/bt_twitter" />

    <Button
        android:id="@+id/bt_join_permping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_login_with_twitter"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_join_permping" />

</RelativeLayout>