<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include android:layout_width="fill_parent" layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/loginfb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_facebook"
            android:layout_gravity="center"
        android:textColor="#FFFFFF"
            android:background="@drawable/button_bg" />

        <Button
            android:id="@+id/logintw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_twitter"
            android:layout_gravity="center"
        android:textColor="#FFFFFF"
            android:background="@drawable/button_bg" />
        
    </LinearLayout>
    
    <View
    android:layout_width="fill_parent"
    android:layout_height="2dp"
    android:background="@android:color/darker_gray"/>
    
    <EditText
        android:id="@+id/permUsername"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_username"
        style="@style/edit_text" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/permPassword"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/hint_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_gravity="center">

        <Button
            android:id="@+id/loginPerm"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_login"
            android:layout_gravity="center"
        android:textColor="#FFFFFF"
            android:background="@drawable/button_bg" android:gravity="center"/>

        <!-- <Button
            android:id="@+id/cancelPerm"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_cancel"
            android:layout_gravity="center"
        android:textColor="#FFFFFF"
            android:background="@drawable/button_bg" />
 -->
    </LinearLayout>
    	
</LinearLayout>