<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        layout="@layout/new_perm_title_bar" />


     <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/categoryItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/explorer_item_bg_first">

        <EditText
            android:id="@+id/permDesc"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:hint="@string/new_description"
            android:background="#00000000"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
     <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/categoryItemLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="-3dp"
        android:background="@drawable/explorer_item_bg">
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_board"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <!--  <TextView
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="0.93"
              android:gravity="right"
              android:text="Select board..."
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:textColor="#000000" />  -->

		<Spinner
		    android:id="@+id/boardSpinnerNewPerm"
		    android:layout_width="200dp"
		    android:layout_height="25dp"
		    android:background="#00000000"
		    android:gravity="center"
		    android:prompt="@string/board_prompt" />

         <ImageView
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:scaleType="fitEnd"
            android:src="@drawable/right_arrow" />
        

    </LinearLayout>
    
      <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/categoryItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="-3dp"
        android:background="@drawable/explorer_item_bg_end">
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_place"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
         <ToggleButton
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_marginLeft="163dip"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            android:textOn=""
            android:textOff="" />
         

    </LinearLayout>
    
      
      
      
      
      
 	<TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="Share on "
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
 	
 	
 	
 	
 	
 	
 	
 	
 	 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/categoryItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/explorer_item_bg_first">
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_facebook"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
         <ToggleButton
            android:id="@+id/share_facebookr"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="130dip"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:scaleType="fitEnd"
            android:textOn=""
            android:textOff=""
            />
         
    </LinearLayout>
    
 	 
 	 
 	  <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/categoryItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="-3dp"
        android:background="@drawable/explorer_item_bg">
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_twitter"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <ToggleButton
            android:id="@+id/share_twitter"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="148dip"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:scaleType="fitEnd"
            android:textOn=""
            android:textOff=""/>
        

    </LinearLayout>
    
 	  
 	   <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/categoryItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="-3dp"
        android:background="@drawable/explorer_item_bg_end">
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_kakao_talk"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <ToggleButton
            android:id="@+id/share_kakao"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="130dip"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:scaleType="fitEnd"
            android:textOn=""
            android:textOff="" />
        

    </LinearLayout>
    

</LinearLayout>